# warden

./: .gitignore  README.md  e2e_test.py  pyproject.toml
examples/: policy.yaml  trading_bot.py
tests/: test_engine.py
warden/: __init__.py  cli.py  engine.py  feed.py
warden/middleware/: crewai.py  decorator.py  langchain.py
warden/threats/: patterns.yaml
